send confirmation letter - done

--- a/.env
+++ b/.env
@@ -7,3 +7,11 @@ DB_HOST=localhost
 DB_PORT=5432
 
 SECRET_KEY=secret_key_123
+
+EMAIL_HOST=smtp.mail.ru
+EMAIL_PORT=465
+EMAIL_ADDRESS=lesopilka24.service@mail.ru
+EMAIL_PASSWORD=j5hmBp45wMvreQZdf1wE
+SITE_HOST=http://localhost:3000
+SITE_NAME=lesopilka24.ru
+BASE_CONFIRM_URL=http://localhost:5000/api/user/confirm_registration
