--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ EMAIL_HOST=smtp.mail.ru
 EMAIL_PORT=465
 EMAIL_ADDRESS=lesopilka24.service@mail.ru
 EMAIL_PASSWORD=j5hmBp45wMvreQZdf1wE
-SITE_HOST=http://localhost:3000
 SITE_NAME=lesopilka24.ru
+SITE_HOST=http://localhost:3000
 BASE_CONFIRM_URL=http://localhost:5000/api/user/confirm_registration
+SUCCESS_REGISTRATION_SITE_PAGE=http://localhost:3000/success_registration
