--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 .idea
 node_modules
 static/*
-!static/.example
+!static/0_SC_1_brus.jpg
+!static/0_SC_2_doska.jpg
+!static/0_SC_3_vagonka.jpg
+!static/0_SC_4_pogonage.jpg
+!static/0_SC_5_block_land_house.jpg
+!static/0_SC_6_brevno.jpg
+!static/0_SC_7_opilki_pellety.jpg
