--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "mustache": "^4.2.0",
     "nodemailer": "^6.7.8",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
