--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-PORT=5001
+SERVER_HOST=http://localhost
+SERVER_PORT=5500
 
 DB_NAME=postgres
 DB_USER=a500
@@ -14,5 +15,5 @@ EMAIL_ADDRESS=lesopilka24.service@mail.ru
 EMAIL_PASSWORD=j5hmBp45wMvreQZdf1wE
 SITE_NAME=lesopilka24.ru
 SITE_HOST=http://localhost:3000
-BASE_CONFIRM_URL=http://localhost:5001/api/user/confirm_registration
+BASE_CONFIRM_URL=http://localhost:5500/api/user/confirm_registration
 SUCCESS_REGISTRATION_SITE_PAGE=http://localhost:3000/success_registration
