--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
-    "html-pdf": "^3.0.1",
-    "jsonwebtoken": "^8.5.1",
+    "html-pdf": "^1.5.0",
+    "jsonwebtoken": "^9.0.0",
     "mustache": "^4.2.0",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.7.8",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
