--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
-    "mustache": "^4.2.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.7.8",
     "pg": "^8.8.0",
