--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ SECRET_KEY=secret_key_123
 
 EMAIL_HOST=smtp.mail.ru
 EMAIL_PORT=465
-EMAIL_ADDRESS=lesopilka24.service@mail.ru
+EMAIL_ADDRESS=lesopilka24.service@mail.ru---
 EMAIL_PASSWORD=5v7PpQamvZA6jxUiv6Ag
 
 SITE_NAME=lesopilka24.ru
